<resources>
    <string name="app_name">PetFeed</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="email">Enter your e-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_again_signup">Re-enter Password</string>
    <string name="button_send">Send!</string>
    <string name="title_activity_display_message">Welcome!</string>
    <string name="title_activity_home">HomeActivity</string>

    <!--constants-->
    <string name="json_data">data</string>
    <string name="json_type">type</string>
    <string name="json_message">message</string>
    <string name="json_data_username">username</string>
    <string name="json_data_password">password</string>
    <string name="json_data_token">token</string>
    <string name="json_data_name">name</string>
    <string name="shared_user_session">user_session</string>
    <string name="shared_user_session_token">user_session_token</string>
    <string name="BASE_URL">http://192.168.1.7:8000</string>
    <string name="SIGN_IN">/rs/login/authenticate</string>
    <string name="SIGN_UP">/rs/login/signup</string>
    <!-- End of constants-->

    <!--visual representations-->
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>
    <!-- End of visual representations -->

    <!--Alerts & messages-->
    <string name="login_error">Error during login!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="title_activity_settings">Settings</string>
    <!-- End of Alerts & messages-->


    <!-- Strings related to Settings -->
    <string name="pref_header_settings">Settings</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <!-- End of Example General settings -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- End of Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <!-- End of Example settings for Notifications -->

    <!-- End of Strings related to Settings -->

</resources>
