<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="tr.com.minder.petfeed.settings.SettingsActivity$SettingsFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general">
        <extra
            android:name="@string/pref_header_settings"
            android:value="@string/pref_header_general"/>
    </header>

    <header
        android:fragment="tr.com.minder.petfeed.settings.SettingsActivity$SettingsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications">
        <extra
            android:name="@string/pref_header_settings"
            android:value="@string/pref_header_notifications"/>
    </header>

    <header
        android:fragment="tr.com.minder.petfeed.settings.SettingsActivity$SettingsFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync">
        <extra
            android:name="@string/pref_header_settings"
            android:value="@string/pref_header_data_sync"/>
    </header>

</preference-headers>
