<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/email_signin"
        android:hint="@string/email"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email_signin"
        android:id="@+id/password_signin"
        android:password="true"
        android:hint="@string/password"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/button_send"
        android:onClick="signInAccount"
        android:layout_below="@+id/password_signin" />


</RelativeLayout>